--- a/CoolBlue/editAccount.xaml
+++ b/CoolBlue/editAccount.xaml
@@ -14,7 +14,7 @@
     xmlns:local="clr-namespace:coolBlue"
     
     x:Class="coolBlue.editAccount"
-    Title="Account" Height="754" Width="1122"
+    Title="Account" Height="800" Width="1400"
     Loaded="ThemedWindow_Loaded" WindowStartupLocation="CenterScreen" ShowStatusPanel="True" ShowBackButton="True" ResizeBorderThickness="5,5,9,5" BorderThickness="0"
     >
     <dx:ThemedWindow.Resources>
@@ -26,9 +26,10 @@
         <CollectionViewSource x:Key="uSP_getAllCatsViewSource" Source="{Binding USP_getAllCats, Source={StaticResource categoriesDataSet}}"/>
         <CollectionViewSource x:Key="uSP_getAllCurrencyViewSource" Source="{Binding USP_getAllCurrency, Source={StaticResource registerDataSet}}"/>
     </dx:ThemedWindow.Resources>
-    <dxlc:ScrollBox HorizontalAlignment="Left"  Grid.Row="0" Grid.RowSpan="11" Grid.ColumnSpan="7" VerticalAlignment="Top" ScrollViewer.HorizontalScrollBarVisibility="Auto" ScrollViewer.VerticalScrollBarVisibility="Auto" Margin="0" Padding="0" DragScrolling="False" Background="{x:Null}" >
+    <dxlc:ScrollBox HorizontalAlignment="Left"  Grid.Row="0" Grid.RowSpan="11" Grid.ColumnSpan="7" VerticalAlignment="Top" ScrollViewer.HorizontalScrollBarVisibility="Auto"
+                    ScrollViewer.VerticalScrollBarVisibility="Auto" Margin="0,10,0,0" Padding="0" DragScrolling="False" Background="{x:Null}" Width="1400" >
 
-        <Grid  IsEnabled="True" Margin="0,0" Background="#FF093472" ScrollViewer.HorizontalScrollBarVisibility="Visible" Width="1100" Height="700" HorizontalAlignment="Left" VerticalAlignment="Top">
+        <Grid  IsEnabled="True" Margin="0,10,0,0" Background="#FF093472" ScrollViewer.HorizontalScrollBarVisibility="Visible" Width="1400" Height="700" HorizontalAlignment="Left" VerticalAlignment="Top">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Name = "c0"  Width="100"/>
                 <ColumnDefinition Name = "c1" Width="100"/>
